' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
@startuml Entity

package typeorm {
  class "@Entity" as Entity
  hide Entity circle
  class "@Column" as Column
  hide Column circle
  class "@PrimaryColumn" as PrimaryColumn
  hide PrimaryColumn circle
  class "@OneToMany" as OneToMany
  hide OneToMany circle
  class "@JoinColumn" as JoinColumn
  hide JoinColumn circle
  class "@ManyToOne" as ManyToOne
  hide ManyToOne circle
  class "@CreateDateColumn" as CreateDateColumn
  hide CreateDateColumn circle
  class "@UpdateDateColumn" as UpdateDateColumn
  hide UpdateDateColumn circle
}

package auto.entity {
  class "type AutoArt = 'ELEKTRO' | 'VERBRENNER'" as AutoArt
  hide AutoArt circle

  class "type Hersteller = 'AUDI' | 'BMW'" as Hersteller
  hide Hersteller circle

  class Auto <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: string
    @Column() readonly modell: string
    @Column() readonly ps: number
    @Column() readonly art: AutoArt
    @Column() readonly hersteller: Hersteller
    @Column() readonly preis: number
    @Column() readonly rabatt: number
    @Column() readonly lieferbar: boolean
    @Column() readonly datum: Date
    @Column() readonly modellnummer: string
    @Column() readonly homepage?: string
    @CreateDateColumn() readonly erzeugt: Date
    @UpdateDateColumn() readonly aktualisiert: Date
  }

  class Kategorie <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: string
    @Column() readonly kategorie: string
    @ManyToOne() readonly auto: Auto
  }

  Auto ..> Entity
  Auto *--> "*" Kategorie : @OneToMany() kategorien
  Auto .up.> AutoArt
  Auto .up.> Hersteller

  AutoArt .[hidden].> Hersteller
}

hide empty members

@enduml
